@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "rcsb.db"
 description = "RCSB Python Database Access and Loading Utility Classes"
-version = "1.812"
+version = "1.813"
 readme = "README.md"
 authors = [
     { name="John Westbrook", email="john.westbrook@rcsb.org" }
